--- a/simple_calculator.html
+++ b/simple_calculator.html
@@ -4,7 +4,7 @@
 		<meta character="utf-8">
 		<title> Simple Calculator</title>
 
-
+		<script src = "calculator.js"></script>
 	</head>
 	<body>
 	</body>
