Programing the UI

--- a/simple_calculator.html
+++ b/simple_calculator.html
@@ -5,7 +5,14 @@
 		<title> Simple Calculator</title>
 
 		<script src = "calculator.js"></script>
+		<script src = "main.js"></script>
 	</head>
 	<body>
+		Simple Calculator
+		<input type = "text" onchange="calculate(this.value)">
+		<div>
+			Result
+			<span id="result"> 0 </span>
+		</div>
 	</body>
 </html>
