--- a/spec-runner.html
+++ b/spec-runner.html
@@ -12,6 +12,8 @@
   <script src="lib/boot.js"></script>
 
   <!--TODO: Include our own specs -->
+  <script src = "calculator.js"></script>
+  <script src = "calculator.spec.js"></script>
 
 </head>
 
