--- a/spec-runner.html
+++ b/spec-runner.html
@@ -10,6 +10,7 @@
   <script src="lib/jasmine.js"></script>
   <script src="lib/jasmine-html.js"></script>
   <script src="lib/boot.js"></script>
+  <script src="custom-matchers.js"></script>
 
   <!--TODO: Include our own specs -->
   <script src = "calculator.js"></script>
