use beforeAll, afterAll to update main.spec.js

--- a/spec-runner.html
+++ b/spec-runner.html
@@ -15,7 +15,9 @@
 
   <!--TODO: Include our own specs -->
   <script src = "calculator.js"></script>
+  <script src = "main.js"></script>
   <script src = "calculator.spec.js"></script>
+  <script src = "main.spec.js"></script>
 
 </head>
 
